--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "papaparse": "^5.3.1",
     "sweetalert2": "^11.1.2",
     "uuid": "^3.4.0",
     "vue": "^2.6.11",
